fix ctas display none on small screens

--- a/src/components/home_header/styles.scss
+++ b/src/components/home_header/styles.scss
@@ -75,7 +75,7 @@
     @media(max-width: 991px) and (min-width: 481px) {
       margin-top: 48px;
     }
-    @media(max-width: 768px) {
+    @media(max-width: 1023px) {
       margin-top: 24px;
       &.condensed {
         display: none;
